<resources>
    <string name="app_name">Fit 4 U</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome, New Member!</string>
    <string name="password">Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="username">Username</string>
    <string name="e_mail">E-Mail</string>
    <string name="height">Height (in)</string>
    <string name="weight">Weight (lbs)</string>
    <string name="age">Age</string>
    <string name="confirm">Confirm</string>
    <string name="string_appimage">placeholder</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="back">Back</string>
    <string name="shoulders">Shoulders</string>
    <string name="chest">Chest</string>
    <string name="abs">Abs</string>
    <string name="legs">Legs</string>

    <!-- main menu strings -->
    <string name="home">Home</string>
    <string name="workout">Get Workout</string>
    <string name="reserve_room">Reserve Room</string>
    <string name="list_equipment">List of Equipment</string>
    <string name="health_profile">My Health Profile</string>
    <string name="logout">Log Out</string>

    <!-- equipment list strings-->
    <string name="equipment_muscles">Muscles: </string>
    <string name="equipment_name">Equipment: </string>
    <string name="equipment_safety">Safety: </string>
    <string name="equipment_variants">Variants: </string>
    <string name="muscle_groups">Muscle Groups</string>
    <string name="favorites">Favorites</string>
    <string name="reserve">Reserve</string>
    <string name="profile">Profile</string>
    <string name="workouts">Workouts</string>
    <string name="equipment">Equipment</string>
    <string name="search">Search</string>
    <string name="enter_location_or_equipment">Enter Location or Equipment</string>
</resources>