<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment" >

    <TextView
        android:id="@+id/welcome_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_registration_password"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/et_registration_username"
        app:layout_constraintStart_toStartOf="@+id/et_registration_username"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_username" />

    <EditText
        android:id="@+id/et_registration_phone"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/et_registration_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_registration_email"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_email" />

    <EditText
        android:id="@+id/et_registration_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_TextView" />

    <EditText
        android:id="@+id/et_registration_email"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/et_registration_password"
        app:layout_constraintStart_toStartOf="@+id/et_registration_password"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_password" />

    <Spinner
        android:id="@+id/sp_bodyType"
        android:layout_width="276dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/et_registration_phone"
        app:layout_constraintStart_toStartOf="@+id/et_registration_phone"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_phone" />

    <EditText
        android:id="@+id/et_registration_height"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_registration_weight"
        app:layout_constraintStart_toStartOf="@+id/sp_bodyType" />

    <EditText
        android:id="@+id/et_registration_age"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/et_registration_height"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_weight" />

    <Spinner
        android:id="@+id/sp_sex"
        android:layout_width="118dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/et_registration_weight"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_weight" />

    <EditText
        android:id="@+id/et_registration_weight"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/sp_bodyType"
        app:layout_constraintTop_toBottomOf="@+id/sp_bodyType" />

    <Button
        android:id="@+id/btn_register"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="44dp"
        android:text="@string/confirm"
        android:textColor="#1E7FE9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sp_sex"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="@+id/et_registration_age"
        app:rippleColor="#bbdefb"
        app:strokeColor="#074991" />

    <EditText
        android:id="@+id/et_registration_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registration_password" />

</androidx.constraintlayout.widget.ConstraintLayout>