<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <Button
        android:id="@+id/login_Button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="#1E7FE9"
        app:layout_constraintBottom_toTopOf="@+id/no_account_TextView"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password"
        app:layout_constraintVertical_bias="0.291"
        app:rippleColor="#bbdefb"
        app:strokeColor="#074991" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="397dp"
        android:layout_height="340dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/appicon_ImageView" />

    <ImageView
        android:id="@+id/appicon_ImageView"
        android:layout_width="419dp"
        android:layout_height="265dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/string_appimage"
        android:src="@drawable/fit4u"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_account_TextView"
        android:layout_width="196dp"
        android:layout_height="23dp"
        android:layout_marginBottom="24dp"
        android:text="@string/no_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/register_Button"
        app:layout_constraintEnd_toEndOf="@+id/login_Button"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/login_Button" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_login_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_login_username"
        app:layout_constraintTop_toBottomOf="@+id/et_login_username" />

    <Button
        android:id="@+id/register_Button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/flatsquare_button"
        android:text="@string/register"
        android:textColor="#7A7A7A"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/no_account_TextView"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/no_account_TextView" />

</androidx.constraintlayout.widget.ConstraintLayout>